Copyright (c) 2003-2005 Infrae. All rights reserved.
See also LICENSE.txt

SilvaExternalSources changes

  0.13

    Bugs fixed:

      - Fixed unicode bug when using non-ascii chars in field titles (Kupu 
        specific, port from 0.10 branch).

  0.12

    Bugs fixed:
 
      - Fixes to security declarations to stop Zope 2.8.5+ startup warnings.

      - Some HTML template cleanups.

      - Import registerDirectory from Silva's fssite.

  0.11

    Features added:

      - Silva 1.5 (Zope 2.8) compatibility fixes.

  0.10.3

    Bugs fixed:

      - Fixed unicode bug in SQL statement, this didn't support non-ascii
        characters yet.

      - Fixed conditionals in the layout template, setting 'show_caption' and
        'show_column_heading' should now have an effect.

  0.10.2:

    Bugs fixed:

      - Fixed typo in add_submit script for CSVSource.

      - Fixed issue1257, context problems in Kupu, Kupu code now uses the same code
        to find code sources as the rest of Silva.

  0.10.1

    Bugs fixed:

     o Fixed missing import for Silva.i18n.translate

  0.10

    Features added:

     o i18n, German translation.

    Bugs fixed:

     o The layout pagetemplate for rendering the SQL result set now
       gets more information about the columns names and their
       order. The pagetemplates of existing SQL Source instances need
       to be updated to make use of this information.

  0.9.1

    Features added:

     o Silva 1.1 compatibility.

    Bugs fixed:

     o Added support for default values in the Kupu editor tool.

  0.9

    Features added:

      o XML exporter for external source-based data in
        documents. Needed to support Silva's XSLT rendering.

  0.8

    Bugs fixed:

      o Configure the correct "add" permissions (esp. for
        CSV Sources)

  0.8b1

    Features added:
     
      o Kupu support.

    Bugs fixed:

      o The description could not be set empty. It can now.
